--- a/server/package.json
+++ b/server/package.json
@@ -3,27 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+  "test": "echo "Error: no test specified" && exit 1",
+  "start": "node index.js",
+  "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.9.0",
-    "cookie-session": "^2.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-session": "^1.18.1",
-    "mongoose": "^8.14.2",
-    "openai": "^4.98.0",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+  "axios": "^1.9.0",
+  "cookie-session": "^2.1.0",
+  "cors": "^2.8.5",
+  "dotenv": "^16.5.0",
+  "express": "^5.1.0",
+  "express-session": "^1.18.1",
+  "mongoose": "^8.14.2",
+  "openai": "^4.98.0",
+  "passport": "^0.7.0",
+  "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+  "nodemon": "^3.1.10"
   }
-}
+  }
