--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "Index.js",
   "scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node index.js",
-  "dev": "nodemon index.js"
+  "start": "node Index.js",
+  "dev": "nodemon Index.js"
   },
   "keywords": [],
   "author": "",
